update to fix traffic nav link on mobile
update to fix traffic nav link on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -411,11 +411,15 @@
 }
 
 @media screen and (max-width: 425px) {
+  .traffic__header {
+    display: block;
+  }
   .traffic__header h3 {
     margin-bottom: .5rem;
   }
   .traffic__nav {
     margin: 0;
+    width: 100%;
   }
   .traffic__nav__link {
     font-size: 1rem;
