--- a/scss/component/_main-traffic.scss
+++ b/scss/component/_main-traffic.scss
@@ -53,6 +53,7 @@
     .traffic {
 
         &__header {
+            display: block;
 
             h3 {
                 margin-bottom: .5rem;
@@ -61,6 +62,7 @@
 
         &__nav {
             margin: 0;
+            width: 100%;
             
             &__link {    
                
